Novo modelo de Tasks ajustada, pois a última task sempre ficava em execução cíclica eternamente.